--- a/app/views/templates/job.html
+++ b/app/views/templates/job.html
@@ -6,6 +6,10 @@
   border-bottom: 1px solid lightgray;
 }
 
+.edit-panel {
+	padding-top: 20px;
+}
+
 .job-panel input {
   border:none;
   background: none;
@@ -17,9 +21,6 @@
   display:flex;
   padding:0;
   margin-bottom:0;
-}
-
-.job-panel .panel-heading input {
   font-size: x-large;
   font-weight: 400;
   color: #0065C4;
@@ -89,7 +90,7 @@
 	padding-bottom:0;
 }
 
-.short-location {
+.subtitle-location {
 	color: gray;
 }
 
@@ -106,7 +107,7 @@
 	font-style:normal;
 }
 
-.job-panel textarea {
+.job-panel textarea, .job-panel input[type='text'] {
 	width:100% !important;
 }
 
@@ -122,20 +123,37 @@
 	<div class="public-job-details">
 		<!-- title -->
 		<h3 class = "panel-heading">
-			<input type="text" class="form-control" ng-model="job_.title" ng-change="save()">
+			<a>{{job_.title}}</a>
 		</h3>
 		<div class = "panel-heading-subtitle">
 			<span class = "client-name">Alice</span>
 			<span> - </span>
-			<span class = "short-location">Dongzhimen, Beijing</span>
+			<span class = "subtitle-location">			
+				<span class = "short-location">{{job_.shortLocation}}<i>, </i></span>				
+				<span class = "subtitle-city">{{job_.city.en}}</span>
+			</span>
 		</div>
 
 		<!-- description -->
 		<div class = "panel-body">
-			<textarea ng-model="job_.longDesc" class="form-control" ng-change="save()"></textarea>
+			<span>{{job_.longDesc}}</span>
 		</div>
 
 			<form class = "edit-panel form-inline" collapse="isCollapsed">
+				<div class="text-center" ng-show="!isCollapsed">
+					-<button class="btn btn-link" ng-click="coll()">{{readMore}}</button>- 
+				</div>
+
+				<ul class = "list-group">
+					<li class = "list-group-item">
+						<label>Title</label>
+						<input type="text" class="form-control" ng-model="job_.title" ng-change="save()">
+					</li>
+					<li class = "list-group-item">
+						<label>Description</label>
+						<textarea ng-model="job_.longDesc" class="form-control" ng-change="save()"></textarea>
+					</li>
+				</ul>
 				
 				<ul class="list-group">
 					<li class="list-group-item subjects-list-item">
@@ -171,14 +189,18 @@
 
 					<!-- city -->
 					<li class="list-group-item subjects-list-item">
-						<span class="select-dropdown"><label>City:</label>{{job_.city}}</span>
-						<select ng-model="job_.city" ng-change="save()" ng-options="c as (c) for c in cities track by c" class="reign-in form-control">
+						<span class="select-dropdown"><label>City:</label>{{job_.city.en }}</span>
+						<select ng-model="job_.city" ng-change="save()" ng-options="c as c.en for c in cities track by c" class="reign-in form-control">
 							<option value="">Choose a city</option>
 						</select>
 					</li>
 					<!-- location -->
 					<li class="list-group-item">
-						<label>Location:</label>
+						<label>Short Location:</label>
+						<input type="text" ng-model="job_.shortLocation" class="form-control" ng-change="save()">
+					</li>
+					<li class = "list-group-item">
+						<label>Long Location:</label>
 						<input type="text" ng-model="job_.locationDesc" class="form-control" ng-change="save()">
 					</li>
 				</ul>
