--- a/app/views/templates/job.html
+++ b/app/views/templates/job.html
@@ -140,7 +140,7 @@
 		</div>
 
 			<form class = "edit-panel form-inline" collapse="isCollapsed">
-				<div class="text-center" ng-show="!isCollapsed">
+				<div class="text-center">
 					-<button class="btn btn-link" ng-click="coll()">{{readMore}}</button>- 
 				</div>
 
