--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -59,6 +59,9 @@
 	  font-size: 1.5em;
 	  line-height: 2em;
 	}
+	@media screen and (max-width: 768px) {
+
+	}
 </style>
 
 <div class="page-header">
@@ -169,8 +172,8 @@
 			Documents
 		</div>
 			<li>
-				<span class="fields-name"></span><br/>
-				<span class="fields-value"></span>
+				<span class="fields-name">CV</span><br/>
+				<span class="fields-value"><a target="_blank" href="{{user.cv}}">View</a></span>
 			</li>
 	</div>
 
