--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -86,6 +86,13 @@ body {
 .navbar-brand img {
   max-width:135px;
 }
+
+@media screen and (min-width: 900px) {
+  .container {
+    max-width: 950px;
+  }
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
